--- a/Carpool.Server/Carpool.Server/appsettings.json
+++ b/Carpool.Server/Carpool.Server/appsettings.json
@@ -1,12 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CarpoolDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CarpoolDb;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Key": "SuperSecretKey12345"
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
